# opencv-kotlin-camera

./: .gitattributes  build.gradle  gradle.properties  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  PicUtils.cpp  PicUtils.h  Scanner.cpp  Scanner.h  android_utils.cpp  android_utils.h  flag.cxx  flag.hpp  loadjpeg.cpp  loadjpeg.h  native-lib.cpp  native-lib.h  secret_key.cpp  secret_key.h
app/src/main/cpp/include/ffmpeg/libavformat/: avformat.h  avio.h  internal.h  os_support.h  rtsp.h  url.h  urldecode.h
app/src/main/java/com/wdy/camera/: MainActivity.kt  StarterApplication.kt
app/src/main/java/com/wdy/camera/activity/: CameraActivity.kt  MainActivity.kt  ManualDCScannerActivity.kt  SplashActivity.kt
app/src/main/java/com/wdy/camera/constant/enums/: FabSortItem.java
app/src/main/java/com/wdy/camera/constant/preferences/: UserPreferences.java
app/src/main/java/com/wdy/camera/extensions/: BitmapExtensions.kt  MatExtensions.kt
app/src/main/java/com/wdy/camera/utils/: ColorUtils.java  DialogUHelper.kt  NativeInterface.java  TfLiteUtils.java
app/src/main/java/com/wdy/camera/widget/: MTCameraView.java
app/src/main/res/layout/: activity_camera.xml  activity_main.xml  activity_manual_dc_scanner.xml  activity_splash.xml  content_main.xml  content_main1.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml
app/src/test/java/com/github/ramonrabello/opencv/kotlin/camera/: ExampleUnitTest.kt
buildsystem/: dependencies.gradle
ktx/: build.gradle
opencv/sdk/: build.gradle
opencv/sdk/java/src/org/opencv/android/: CameraBridgeViewBase.java  JavaCamera2View.java  JavaCameraView.java
